[chromium] Implicitly skip render surfaces that won't be drawn https://bugs.webkit.org/show_bug.cgi?id=71038

Rather than having redundant checks in three places for how to walk
through a render surface list, instead don't add render surfaces that
don't need to get rendered to the render surface list.

Reviewed by James Robinson.

Covered by existing layout tests.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::drawLayersOntoRenderSurfaces):
* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::paintLayerContents):
(WebCore::CCLayerTreeHost::updateCompositorResources):
* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::calculateDrawTransformsAndVisibilityInternal):


Canonical link: https://commits.webkit.org/87374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98757 268f45cc-cd09-0410-ab3c-d52691b4dbfc